--- a/index.html
+++ b/index.html
@@ -4,16 +4,70 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <script src="https://cdn.tailwindcss.com?plugins=forms,typography"></script>
+    <script src="https://unpkg.com/unlazy@0.11.3/dist/unlazy.with-hashing.iife.js" defer init></script>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>solo</h1>
+   
 
 
 
 
-    <h5>gg</h5>
 
 
-    <h3>ggggg</h3>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+    
+
+
+    <div class="AZIZLEGION">
+        <div class="bg-blue-500 p-10 rounded-lg">
+            <p class="text-white text-lg mb-2">Join with our community</p>
+            <h2 class="text-white text-xl font-semibold mb-4">Set your social media growth on autopilot</h2>
+            <div class="flex">
+              <input type="email" placeholder="Your email address" class="flex-1 p-2 rounded-l-lg border border-zinc-300" />
+              <button class="bg-red-500 text-white p-2 rounded-r-lg hover:bg-red-400">Subscribe</button>
+            </div>
+          </div>
+          <div>
+              </div>
+          </div>
+
+          <footer>
+            <div class="aza">
+                <p style="color: white;">Soudemy</p>
+                <span style="color: grey;">Lorem ipsum dolor sit amet consectetur. <br> Tristique in nullam sed curabitur purus mauris. <br> Adipiscing eget egestas tortor nisl ut in tempor </span>
+            </div>
+            <div class="ara">
+                <p style="color: white;">Company</p>
+                <span style="color: grey;">About <br> Careers <br> Blog <br> Pricing</span>
+            </div>
+            <div class="ara">
+                <p style="color: white;">Product</p>
+                <span style="color: grey;">Facebook followers <br> Instagram followers <br> Twitter followers <br> Tik tok followers</span>
+            </div>
+            <div class="ara">
+                <p style="color: white;">Resources</p>
+                <span style="color: grey;">Proposal template <br> Invoices <br> Tuturoial <br> How to increase activity</span>
+            </div>
+          </footer>
 </body>
 </html>
