--- a/index.html
+++ b/index.html
@@ -61,7 +61,8 @@
     </div>
     <div class="box12">
     <h3>Trusted by over 100+ startups and freelance business</h3>
-    </div>
+    </div>\
+    
 </body>
 
 </html>
